# homeassistant-gasandwaterconsumption

./: .cursorrules  .gitattributes  .gitignore  CHANGELOG.md  FOSS.md  LICENSE  README.md  SBOM.json  SBOM.md  hacs.json  pyproject.toml  repository.yaml  requirements_test.txt
.github/: copilot-instructions.md
.github/skills/gas-water-meter-project/: SKILL.md
.github/workflows/: tests.yml
custom_components/gas_water_meter/: __init__.py  config_flow.py  coordinator.py  icons.json  manifest.json  ocr.py  sensor.py  services.yaml  store.py
frontend-src/: package-lock.json  package.json  rollup.config.mjs  web-test-runner.config.mjs
frontend-src/src/: gas-water-meter-panel.js
frontend-src/test/: gas-water-meter-panel.test.js
gas-water-meter/: CHANGELOG.md  DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
gas-water-meter/custom_components/gas_water_meter/: __init__.py  config_flow.py  const.py  coordinator.py  db.py  http.py  manifest.json  ocr.py  sensor.py  services.yaml  strings.json  websocket.py
gas-water-meter/custom_components/gas_water_meter/frontend/: entrypoint.js
gas-water-meter/custom_components/gas_water_meter/tessdata/: README.md
gas-water-meter/custom_components/gas_water_meter/translations/: de.json  en.json
gas-water-meter/translations/: de.yaml  en.yaml
plans/: plan-electricityMeter.prompt.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_db.py  test_http.py  test_init.py  test_ocr.py  test_sensor.py  test_services.py  test_store.py  test_websocket.py
