[project]
name = "gas-water-meter"
version = "0.0.2"
description = "Home Assistant custom integration for manual gas and water meter reading entry with OCR, projection, and cost tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "ulfwuestefeld"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["gas-water-meter"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "TRY003",  # long exception messages are fine
    "S101",    # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PLR2004", "S108"]
"gas-water-meter/**" = []
